# MissYouRGB

./: .gitignore  Taskfile.yml
bot/: Dockerfile  pyproject.toml
bot/bot/: bot.py
client/: Dockerfile  pyproject.toml
client/client/: client.py
common/: pyproject.toml
server/: Dockerfile  docker-compose.yml  pyproject.toml  set_env_for_build.sh
server/database/: init.sql
server/server/: server.py
server/server/models/: message.py  pattern.py  user.py
server/server/storage/: database.py  queue.py
